# todo_flask

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_09_12_0145-a45dd1b8783f_initial_migration.py  2024_09_14_0211-c2c8ed2655ff_initial_migration.py  2024_09_15_0110-089699014cd4_add_task_status_enum.py
api/: app.py  config.py
api/models/: __init__.py  base.py  task.py  user.py
api/schemas/: __init__.py  task.py  user.py
api/views/: task.py  user.py
tests/: conftest.py
tests/api/: test_task.py  test_user.py
