[tool.poetry]
name = "todo_flask"
version = "0.1.0"
description = ""
authors = ["Gurtmyrat <gurtmot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
SQLAlchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.1"
alembic = "^1.13.2"
email-validator = "^2.2.0"
flask-jwt-extended = "^4.6.0"
pyjwt = "^2.9.0"
pytest = "^8.3.3"
pytest-flask = "^1.3.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
